# Kirino

./: Cargo.toml
src/: main.rs
src/commands/: diplomacy.rs  fun.rs  mod.rs
