[package]
name = "kirino"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.1", features = ["full"] }
serenity = "0.11"
dotenv = "0.15.0"
lazy_static = "1.4.0"
reqwest = "0.11.20"
serde = {version = "1.0.188", features = ["serde_derive"]}
serde_json = "1.0.105"
